--- a/src/styles/components/ProjectForm.module.scss
+++ b/src/styles/components/ProjectForm.module.scss
@@ -1,5 +1,6 @@
 .container{
     width: 70%;
+    
 }
 .signInBtn{
     position: relative;
@@ -7,6 +8,13 @@
     transform: translateX(-50%);
     margin: 10px 0px 0px 0px;
     background: var(--btn-gradient);
-    box-shadow: var(--box-shadow);
+    box-shadow:
+  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+  100px 100px 80px rgba(0, 0, 0, 0.07);
     border: none;
+    margin-bottom: 20px;
     }
